dark mode gradient, and other minor fixes

--- a/assets/index.css
+++ b/assets/index.css
@@ -223,7 +223,7 @@ footer span {
   margin: auto;
   width: 80%;
   background: var(--footer-color--darker);
-  padding: 5px 10px;
+  padding: 10px;
   border-radius: 20px;
 }
 
@@ -294,6 +294,7 @@ footer span {
   .card.card__main .card__right {
     display: flex;
     flex-direction: column;
+    text-align: center;
   }
 
   section.hero .hero__content {
@@ -337,5 +338,16 @@ footer span {
       rgba(27, 127, 219, 1) 30%,
       rgba(0, 165, 88, 1) 100%
     );
+  }
+}
+
+@media screen and (min-width: 1700px) and (max-height: 900px) and (prefers-color-scheme: dark) {
+  section.hero {
+    background: linear-gradient(rgb(0 0 0 / 70%), rgb(0 0 0 / 70%)),
+      linear-gradient(
+        180deg,
+        rgba(27, 127, 219, 1) 30%,
+        rgba(0, 165, 88, 1) 100%
+      );
   }
 }
